--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,16 @@ after_success:
   - docker push tratten/multi-nginx
   - docker push tratten/multi-server
   - docker push tratten/multi-worker
+
+  deploy:
+    provider: elasticbeanstalk
+    region: eu-central-1
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-eu-central-1-194840718164
+    bucket_path: docker-multi
+    on:
+      branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key:
+      secure: $AWS_SECRET_KEY
